<resources>
    <string name="app_name">NFC Card App</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="scan">Scan your Card!</string>
    <string name="message_tap_tag">Tap the phone to the reader !</string>

    <string name="menu_home">Home</string>
    <string name="menu_mycard">My Card</string>
    <string name="menu_settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="scan_card_mycard_page">You can scan your card in the home page!!</string>
    <string name="a_m">A.M.:</string>
    <string name="first_name">First Name:</string>
    <string name="last_name">Last Name:</string>
    <string name="email">Email:</string>
    <string name="card_number">Card Number:</string>
    <string name="language">Language:</string>
    <string name="scan_your_card">Scan your card</string>
    <string name="home_page_textview">Scan your card to get access to the room</string>
    <string name="help_page_nav_menu_text">To get access to the other pages click here!</string>
    <string name="help_page_scan">To Scan your Card click the button Scan your Card</string>
    <string name="help_page_mycard">To see your Card Info click on the button My Card!!</string>
    <string name="help_page_logout">To Log Out click on the button Log Out</string>
    <string name="university">University:</string>
    <string name="department">Department:</string>
    <string name="year">Year:</string>
    <string name="full_name">Full Name:</string>
    <string name="registration_year">Registration Year:</string>
    <string name="expiration_year">Expiration Year:</string>
</resources>