<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.unipi.atheodoridis.nfccardapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_mycard"
        android:name="com.unipi.atheodoridis.nfccardapp.ui.mycard.MyCardFragment"
        android:label="@string/menu_mycard"
        tools:layout="@layout/fragment_mycard" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.unipi.atheodoridis.nfccardapp.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>